--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <header class="header">
       <h2>
-        N-Queens Visualiser <i class="fas fa-crown" style="color: #9ACD32"></i>
+        N-Queens Visualiser <i class="fas fa-crown" style="color: #fdfffc"></i>
       </h2>
     </header>
     <div class="n-queen">
