--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <header class="header">
       <h2>
-        N-Queens Arranger <i class="fas fa-crown" style="color: #fa7921"></i>
+        N-Queens Arranger <i class="fas fa-crown" style="color:  #ffd200"></i>
       </h2>
     </header>
     <div class="n-queen">
